--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/prova_signatura/">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -34,7 +34,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '858940223';
+    var serviceWorkerVersion = '2191129934';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
@@ -54,8 +54,13 @@
       });
     });
   </script>
+  <div id="force"></div>
+  <div id="touches"></div>
   <canvas>Sorry, your browser is too old for this demo.</canvas>
-  <button onclick="undoDraw()">Eliminar signatura</button>
+  <div id="info">
+    <a href="https://github.com/shuding/apple-pencil-safari-api-test" target="_blank">GitHub</a>
+    <button onclick="undoDraw()">Eliminar signatura</button>
+  </div>
   <script src="signature.js" defer></script>
 </body>
 </html>
